# graduation-design

./: README.md
singlenet-function/: dataset-TFRecord.ipynb  (+4 more)
singlenet-tflite-class/: CMakeLists.txt  main.cpp
singlenet-tflite-class/include/tensorflow/lite/: arena_planner.h  builtin_ops.h  graph_info.h  interpreter.h  interpreter_builder.h  optional_debug_tools.h  string_util.h  type_to_tflitetype.h  util.h
singlenet-tflite-class/include/tensorflow/lite/c/: builtin_op_data.h  c_api_experimental.h  c_api_internal.h
singlenet-tflite-class/include/tensorflow/lite/core/: subgraph.h
singlenet-tflite-class/include/tensorflow/lite/delegates/: utils.h
singlenet-tflite-class/include/tensorflow/lite/kernels/: acceleration_test_util_internal.h  builtin_op_kernels.h  cpu_backend_context.h  cpu_backend_gemm.h  cpu_backend_gemm_ruy.h  custom_ops_register.h  kernel_util.h  lstm_eval.h  register.h  test_util.h
singlenet-tflite-class/include/tensorflow/lite/micro/: debug_log.h  memory_helpers.h  micro_allocator.h  micro_interpreter.h  micro_mutable_op_resolver.h  micro_utils.h  recording_micro_allocator.h  recording_micro_interpreter.h  recording_simple_memory_allocator.h  simple_memory_allocator.h  test_helpers.h
singlenet-tflite-class/inference/: CentroidTracker.cpp  CentroidTracker.h  FallCheck.cpp  FallCheck.h  KPDetect.cpp  KPDetect.h
singlenet-tflite-class/mbase64/: base64Class.cpp  base64Class.h
singlenet-tflite-class/mqtt/: smqtt.cpp  smqtt.h
singlenet-tflite-class/util/: kputil.cpp  kputil.h
singlenet-tflite-class/video/: VideoProcess.cpp  VideoProcess.h
(+324 files in other folders)
